<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10pt">
            <TextView
                android:id="@+id/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/design_default_color_primary"
                android:textSize="24sp" />
            <TextView
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/number"
                android:layout_alignParentEnd="true"
                android:textColor="@color/red"
                android:textSize="24sp"
                android:textAlignment="viewEnd"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/problem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10pt"
            android:layout_marginEnd="10pt"
            android:justificationMode="inter_word"
            android:textSize="24sp" />
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10pt" >
            <RadioButton
                android:id="@+id/A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"/>
            <RadioButton
                android:id="@+id/B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"/>
            <RadioButton
                android:id="@+id/C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"/>
            <RadioButton
                android:id="@+id/D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"/>
            <RadioButton
                android:id="@+id/E"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"/>
        </RadioGroup>
        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10pt"
            android:layout_marginBottom="2pt"
            android:layout_gravity="center_horizontal"
            android:text="@string/submit_and_finish"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/skipButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2pt"
            android:layout_marginBottom="2pt"
            android:layout_gravity="center_horizontal"
            android:text="@string/skip_and_finish"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/previousButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2pt"
            android:layout_marginBottom="10pt"
            android:layout_gravity="center_horizontal"
            android:text="@string/previous"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</ScrollView>